<resources>
    <string name="app_name">Tea Memory</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_statistics">Statistic</string>
    <string name="main_action_search">Suche</string>
    <string name="main_action_about">About</string>
    <string name="main_sort">Sort</string>
    <string-array name="main_sort_menu">
        <item>Sort by last activity</item>
        <item>Sort alphabetical</item>
        <item>Sort by tea variety</item>
    </string-array>
    <string-array name="itemMenu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="main_error_deletion">Deletion could not be performed.</string>
    <string name="main_tooltip_search">Search</string>
    <string name="main_tooltip_newtea">Add tea</string>
    <string name="main_dialog_problem_header">Problem</string>
    <string name="main_dialog_problem">Hey, you are using Android 8 or higher. With these versions, Android has introduced new features that cause problems running this app.</string>
    <string name="main_dialog_problem_checkbox">Do not show me again!</string>
    <string name="main_dialog_problem_ok">Solve the problem</string>
    <string name="main_dialog_problem_cancle">Not now</string>
    <string name="main_dialog_rating_header">Rate this app</string>
    <string name="main_dialog_rating">Do you like the app? I would look forward to a review.</string>
    <string name="main_dialog_rating_checkbox">Do not show me again!</string>
    <string name="main_dialog_rating_positive">Rate now</string>
    <string name="main_dialog_rating_neutral">Later</string>
    <string name="main_dialog_rating_negative">No, thanks</string>
    <string name="showtea_heading">Information</string>
    <string name="showtea_action_note">Note</string>
    <string name="showtea_dialog_note_hint">Write down something.</string>
    <string name="showtea_dialog_note_ok">OK</string>
    <string name="showtea_dialog_note_cancle">Cancle</string>
    <string name="showtea_action_edit">Edit</string>
    <string name="showtea_action_counter">Drinking behavior</string>
    <string name="showtea_dialog_counter_day">Today</string>
    <string name="showtea_dialog_counter_week">This week</string>
    <string name="showtea_dialog_counter_month">This month</string>
    <string name="showtea_dialog_counter_overall">Overall</string>
    <string name="showtea_dialog_counter_ok">OK</string>
    <string name="showtea_dialog_description_header">How to use.</string>
    <string name="showtea_dialog_description_temperature">Calculating the time the boiling water needs to cool to the desired temperature.</string>
    <string name="showtea_dialog_description_amount">Calculate the amount of tea required for the preparation.</string>
    <string name="showtea_dialog_description_brew">Select the desired brew.</string>
    <string name="showtea_dialog_description_checkbox">Do not show me again!</string>
    <string name="showtea_dialog_description_ok">OK</string>
    <string name="showtea_display_celsius">%1$s °C</string>
    <string name="showtea_display_fahrenheit">%1$s °F</string>
    <string name="showtea_display_ts">%1$s ts/L</string>
    <string name="showtea_display_gr">%1$s g/L</string>
    <string name="showtea_dialog_amount">Amount</string>
    <string name="showtea_dialog_amount_scala_left">0.0l</string>
    <string name="showtea_dialog_amount_scala_center">1.0l</string>
    <string name="showtea_dialog_amount_scala_right">2.0l</string>
    <string name="showtea_dialog_amount_per_amount_ts">%1$.1f ts / %2$.1f L</string>
    <string name="showtea_dialog_amount_per_amount_gr">%1$.1f g / %2$.1f L</string>
    <string name="showtea_dialog_amount_ok">OK</string>
    <string name="showtea_display_min">Min</string>
    <string name="showtea_display_sec">Sec</string>
    <string name="showtea_brea_count_point">%1$d.</string>
    <string name="showtea_brew_count_title">Please choose your brew</string>
    <string name="showtea_brew_count_content">Brew</string>
    <string name="showtea_cooldown_title">Cooling period</string>
    <string name="showtea_cooldown_text">For green or white tea the cooking water should be cool down before brew the tea.</string>
    <string name="showtea_cooldown_ok">OK</string>
    <string name="showtea_error_text">Error displaying elements.</string>
    <string name="showtea_timer_start">Start</string>
    <string name="showtea_timer_reset">Reset</string>
    <string name="showtea_tea_ready">Ready</string>
    <string name="showtea_tooltip_notification">Notification</string>
    <string name="showtea_tooltip_vibration">Vibration</string>
    <string name="showtea_tooltip_note">Note</string>
    <string name="showtea_tooltip_exchange">Cooldown time</string>
    <string name="showtea_tooltip_calculateamount">Calculate amount</string>
    <string name="showtea_tooltip_brewcount">Choose brew</string>
    <string name="showtea_tooltip_nextbrew">Next brew</string>
    <string name="showtea_channel_name">Finished tea</string>
    <string name="showtea_channel_description">Will be shown when the tea is ready.</string>
    <string name="newtea_heading">Create/Edit tea</string>
    <string name="tea_sort">Tea variety</string>
    <string-array name="sortsOfTea">
        <item>Black tea</item>
        <item>Green tea</item>
        <item>Yellow tea</item>
        <item>White tea</item>
        <item>Oolong tea</item>
        <item>Pu-erh tea</item>
        <item>Herbal tea</item>
        <item>Fruit tea</item>
        <item>Rooibus tea</item>
        <item>Other</item>
    </string-array>
    <string name="newtea_by_hand">by hand</string>
    <string name="newtea_hint_name">Name</string>
    <string name="newtea_color_label">Color</string>
    <string name="newtea_color_dialog_title">Choose Color: </string>
    <string name="newtea_hint_celsius_blacktea">Temperature (95 &#8211; 100°C)</string>
    <string name="newtea_hint_celsius_greentea">Temperature (60 &#8211; 90°C)</string>
    <string name="newtea_hint_celsius_yellowtea">Temperature (75°C)</string>
    <string name="newtea_hint_celsius_whitetea">Temperature (70 &#8211; 80°C)</string>
    <string name="newtea_hint_celsius_oolongtea">Temperature (75 &#8211; 90°C)</string>
    <string name="newtea_hint_celsius_puerhtea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_herbaltea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_fruittea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_rooibustea">Temperature (100°C)</string>
    <string name="newtea_hint_celsius_other">Temperature (°C)</string>
    <string name="newtea_hint_fahrenheit_blacktea">Temperature (203 &#8211; 212°F)</string>
    <string name="newtea_hint_fahrenheit_greentea">Temperature (140 &#8211; 194°F)</string>
    <string name="newtea_hint_fahrenheit_yellowtea">Temperature (167°C)</string>
    <string name="newtea_hint_fahrenheit_whitetea">Temperature (158 &#8211; 176°F)</string>
    <string name="newtea_hint_fahrenheit_oolongtea">Temperature (167 &#8211; 194°F)</string>
    <string name="newtea_hint_fahrenheit_puerhtea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_herbaltea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_fruittea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_rooibustea">Temperature (212°F)</string>
    <string name="newtea_hint_fahrenheit_other">Temperature (°F)</string>
    <string name="newtea_hint_cooldowntime">Cooldown time "mm:ss" or "mm"</string>
    <string name="newtea_hint_ts_blacktea">Amount  (3 &#8211; 5ts/L)</string>
    <string name="newtea_hint_ts_greentea">Amount (6 &#8211; 8ts/L)</string>
    <string name="newtea_hint_ts_yellowtea">Amount (4 &#8211; 5ts/L)</string>
    <string name="newtea_hint_ts_whitetea">Amount (3 &#8211; 4ts/L)</string>
    <string name="newtea_hint_ts_oolongtea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_puerhtea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_herbaltea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_fruittea">Amount (8 &#8211; 10ts/L)</string>
    <string name="newtea_hint_ts_rooibustea">Amount (4 &#8211; 6ts/L)</string>
    <string name="newtea_hint_ts_other">Amount ts/L</string>
    <string name="newtea_hint_gr_blacktea">Amount  (8 &#8211; 13g/L)</string>
    <string name="newtea_hint_gr_greentea">Amount (10 &#8211; 14g/L)</string>
    <string name="newtea_hint_gr_yellowtea">Amount (10 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_whitetea">Amount (8 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_oolongtea">Amount (10 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_puerhtea">Amount (8 &#8211; 12g/L)</string>
    <string name="newtea_hint_gr_herbaltea">Amount (10 &#8211; 15g/L)</string>
    <string name="newtea_hint_gr_fruittea">Amount (15 &#8211; 20g/L)</string>
    <string name="newtea_hint_gr_rooibustea">Amount (12 &#8211; 15g/L)</string>
    <string name="newtea_hint_gr_other">Amount g/L</string>
    <string name="newtea_hint_time_blacktea">Steeping time "mm:ss" or "mm" (3 &#8211; 5min)</string>
    <string name="newtea_hint_time_greentea">Steeping time "mm:ss" or "mm" (1 &#8211; 3min)</string>
    <string name="newtea_hint_time_yellowtea">Steeping time "mm:ss" or "mm" (1 &#8211; 3min)</string>
    <string name="newtea_hint_time_whitetea">Steeping time "mm:ss" or "mm" (1 &#8211; 4min)</string>
    <string name="newtea_hint_time_oolongtea">Steeping time "mm:ss" or "mm" (0:30 &#8211; 4min)</string>
    <string name="newtea_hint_time_puerhtea">Steeping time "mm:ss" or "mm" (5 &#8211; 15sec)</string>
    <string name="newtea_hint_time_herbaltea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_fruittea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_rooibustea">Steeping time "mm:ss" or "mm" (5 &#8211; 10min)</string>
    <string name="newtea_hint_time_other">Steeping time "mm:ss" or "mm"</string>
    <string name="newtea_error_30Char">The type of tea exceeds the limit number of 30 characters.</string>
    <string name="newtea_error_name">The name exceeds the limit number of 300 characters.</string>
    <string name="newtea_error_wrong_celsius">The temperature should be between 0 °C and 100 °C.</string>
    <string name="newtea_error_wrong_fahrenheit">The temperature should be between 32 °F and 212 °F.</string>
    <string name="newtea_error_auto_cooldown_time">Cooldown time can not be determined.</string>
    <string name="newtea_error_cooldown_time">Please follow the format of the cooldown time.</string>
    <string name="newtea_error_time_format">Please follow the format of the steeping time.</string>
    <string name="newtea_error_amount">The amount should not be more than three digits.</string>
    <string name="newtea_error_cant_change">Change could not be performed.</string>
    <string name="settings_alarm">Alarm sound</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_temperature_unit">Temperature unit</string>
    <string name="settings_show_hints">Hints</string>
    <string name="settings_factory_settings">Factory setting</string>
    <string name="problems_question">Is the timer no longer running in the background?</string>
    <string name="problems_solve">Solve the problem</string>
    <string name="problems_description">The latest update of Android automatically stops all background processes after a few minutes as an energy-saving feature.</string>
    <string name="problems_result">Set the Tea Memory as an exception to the power-saving function.</string>
    <string name="problems_hope">After that, the timer should work in the background again.</string>
    <string name="problems_action">To the setting</string>
</resources>