<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewScaleAmountLeft"
        android:text="@string/showtea_dialog_amount_scala_left"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewScaleAmountCenter"
        android:text="@string/showtea_dialog_amount_scala_center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewScaleAmountRight"
        android:text="@string/showtea_dialog_amount_scala_right"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarAmountPerAmount"
        android:max="20"
        android:progress="10"
        android:layout_below="@+id/textViewScaleAmountCenter"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowAmountPerAmount"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/seekBarAmountPerAmount"
        android:layout_margin="10dp"
        android:gravity="center"/>

</RelativeLayout>