<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewDialogDescriptionTemperature"
            android:src="@drawable/temperatureexchange"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showtea_dialog_description_temperature"
            android:textColor="#000000"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/imageViewDialogDescriptionTemperature"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewDialogDescriptionAmount"
            android:src="@drawable/spoon"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showtea_dialog_description_amount"
            android:textColor="#000000"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/imageViewDialogDescriptionAmount"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageViewDialogDescriptionBrew"
            android:src="@drawable/brewdark"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showtea_dialog_description_brew"
            android:textColor="#000000"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/imageViewDialogDescriptionBrew"/>
    </RelativeLayout>
    <CheckBox
        android:theme="@style/CheckBoxStyle"
        android:id="@+id/checkboxDialogShowTeaDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showtea_dialog_description_checkbox"
        android:textSize="14sp">
    </CheckBox>
</LinearLayout>